style: hide game information

--- a/Css/style.css
+++ b/Css/style.css
@@ -75,7 +75,7 @@ button {
 .result {
   flex-direction: column;
   margin-bottom: 30px;
-  display: none;
+  visibility: hidden;
 }
 
 .result > div {
